infrastructure/sso/1-keycloak-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    app: keycloak
    component: sso
---
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
  labels:
    app: oauth2-proxy
    component: sso
